tests/ui/consts/missing_assoc_const_type2.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/missing_assoc_const_type2.rs:12:18
   |
LL |     const FIRST: _ = 10;
   |                  ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     const FIRST: _ = 10;
LL +     const FIRST: u8 = 10;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
